# fasing

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
core/: Cargo.toml  build.rs
core/src/: algorithm.rs  axis.rs  fas.rs  fas_file.rs  hv.rs  lib.rs  service.rs  struc.rs  svg.rs
core/src/component/: attrs.rs  comb.rs  mod.rs  strategy.rs  struc.rs  view.rs
core/src/config/: interval.rs  mod.rs  process.rs
core/src/construct/: data.rs  error.rs  fasing_1_0.fas  fasing_1_0.rs  mod.rs  space.rs  types.rs
core/src/struc/: attribute.rs  mod.rs  space.rs  variety.rs  view.rs
editor/: .gitignore  Cargo.toml  index.html  next.config.js  package-lock.json  package.json  vite.config.js
editor/public/: editor.html
editor/src/: App.jsx  app.rs  lib.rs  main.jsx  main.rs  paint.rs  theme.js
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: context.rs  lib.rs  main.rs
editor/src/editor/: Editor.jsx  main.jsx
editor/src/func/: context.js
editor/src/gui/: app.rs  event.rs  mod.rs  style.json  theme.rs  widget.rs
editor/src/lib/: action.js  actions.js  construct.js  storageId.js  storageld.js  struc_curve.js
editor/src/pages/: Fasing.js  Header.js  Nav.js  Panel.js  SettingArea.js  SettingPanel.js  index.js
editor/src/pages/Workspace/: CombDisplay.js  CombinationWorkspace.js  ComponentWorkspace.js  Footer.js  SettingPanel.js  Settings.js  StrucDisplay.js  Workspace.js
editor/src/pages/editor/: Editor.js  index.js
editor/src/pages/widgets/: Button.js  List.js  Menu.js
editor/src/styles/: Button.module.css  Collapsible.module.css  ColorPicker.module.css  CombDisplay.module.css  CombinationWorkspace.module.css  ComponentWorkspace.module.css  Fasing.module.css  Input.module.css  Line.module.css  List.module.css  Menu.module.css  Nav.module.css  Panel.module.css  Scroll.module.css  Settings.module.css  StrucDisplay.module.css  StrucEditor.module.css  globals.css
editor/src/widget/: MainMenu.jsx
editor/src/widget/left/: Left.jsx
editor/src/widget/middle/: Middle.jsx  Scroll.jsx
editor/src/widget/right/: Right.jsx
editor/src/widgets/: Area.js  Button.js  Collapsible.js  ColorPicker.js  Icons.js  Input.js  Line.js  List.js  Menu.js  Panel.js  Resizable.js  Scroll.js  Selection.js  Separator.js  Space.js  center.rs  compose_works.rs  extend_works.rs  main_widget.rs  message.rs  mete_comp_works.rs  mod.rs  query_window.rs  sidebar.rs  struc_editor_window.rs
src/: lib.rs
src/base/: assign.rs  axis.rs  mod.rs  space.rs
src/combination/: attrs.rs  comb.rs  mod.rs  struc.rs  view.rs
src/config/: edge_check.rs  interval.rs  mod.rs
src/construct/: data.rs  error.rs  mod.rs  types.rs
src/service/: algorithm.rs  combination.rs  fas.rs  local.rs  mod.rs  space.rs
