[package]
name = "fasing"
version = "0.1.0"
edition = "2021"


[dependencies]
serde_derive = "1.0.152"
serde_json = "1.0.93"
serde = "1.0.152"

euclid = { version = "0.22.7", features = ["serde"] }
num-traits = "0.2.15"
regex = "1.7.1"
once_cell = "1.17.1"

[build-dependencies]
serde_json = "1.0.93"

anyhow = "1.0.69"