[package]
name = "fasing"
version = "0.1.0"
edition = "2021"


[dependencies]
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }

anyhow = "1.0.95"
euclid = { version = "0.22.11", features = ["serde"] }
num-traits = "0.2.19"
regex = "1.11.1"
once_cell = "1.20.3"

[build-dependencies]
serde_json = "1.0.138"

anyhow = "1.0.95"
