[package]
name = "fasing-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fasing = { path = "../core" }

env_logger = "0.10.0"
pollster = "0.3.0"
anyhow = "1.0.69"

serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.93"

wgpu = "0.15.0"
winit = "0.28"

egui = { version = "0.21.0", features = [ "serde" ] }
egui-winit = "0.21.1"
egui-wgpu = "0.21.0"
