[package]
name = "fasing-editor"
version = "0.1.0"
description = "Fasing Editor"
authors = ["chilingg"]
license = "MIT"
repository = ""
default-run = "fasing-editor"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open", "dialog-save", "window-maximize", "window-set-size", "window-set-title"] }

fasing = { path = "../../core" }
directories-next = "2.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
